# codeclass

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SETUP.md  docker-compose.yaml  pyproject.toml  requirements.txt
Páginas/: aulas.html  cursos.html
aulas/: aula0.html  aula3.html  aula4.html  aula6.html  aula7.html  aulas.css
pretemplates/: aulas.html  cadastro.html  class.html  cursos.html  index.html  landing.html  login.html  style.css  user.html
pretemplates/static/: rafa.css
servidor/: manage.py
servidor/ccapp/: __init__.py  admin.py  apps.py  decorators.py  models.py  signals.py  urls.py  views.py
servidor/ccapp/migrations/: 0001_initial.py  0002_comentario_questao_alternativa_student_resposta.py  0003_remove_comentario_likes_alter_comentario_autor.py  0004_remove_student_cursos_matricula.py  0005_alter_matricula_completed_aulas.py  0006_remove_matricula_completed_aulas_aulacompletada.py  0007_remove_comentario_aula_remove_comentario_autor_and_more.py  0008_remove_aula_video_aula_video_id.py  0009_remove_aula_video_id_aula_video_url.py  0010_remove_aula_video_url_aula_video.py  0011_matricula.py  0012_alter_curso_nome_perfil.py  0013_alter_perfil_biografia.py  0014_comentario.py  0015_alter_comentario_aula_alter_comentario_user.py  0016_atividade.py  0017_remove_respostaquestao_resposta_remove_questao_aula_and_more.py  0018_aula_texto_atividade_aula_tipo.py  0019_delete_atividade.py  0020_progressoaula_resposta_atividade_and_more.py
servidor/codeclass/: asgi.py  settings.py  urls.py  wsgi.py
servidor/media/notas_de_aula/: aula0.html
(+23 files in other folders)
