[project]
name = "codeclass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.9.1",
    "django==5.2",
    "pillow==11.3.0",
    "psycopg2-binary==2.9.10",
    "sqlparse==0.5.3",
    "typing-extensions==4.15.0",
]
